src/objects/pse__Utilization_Detail__c.object
<CustomObject>
    <customHelpPage>pse__UtilizationDetailHelp</customHelpPage>
    <description>Contains utilization details for a single region, practice, group, or resource. FinancialForce PSA calculates utilization as a percentage: the number of hours resources have billed, divided into the number of billable hours in a given time period. If configured, utilization also calculates the number of hours resources are assigned in the future (held against resource requests), or aggregates requested and assigned hours by role. Utilization calculations have a master-detail relationship with utilization details.

Run utilization reports on the information stored in this object to understand how utilized your resources are in comparison with their work calendar hours.</description>
    <fields>
        <fullName>User_U_workspace11__c</fullName>
        <formula>IF(  pse__Resource__r.pse__Salesforce_User__c  = $User.Id , 1 , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User U% workspace</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>psa_report__Month__c</fullName>
        <formula>pse__Scheduled_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Period</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>psa_report__Remaining_Capacity__c</fullName>
        <formula>IF(pse__Scheduled_Calendar_Hours__c&gt;0,psa_report__Remaining_Capacity_hours__c/pse__Scheduled_Calendar_Hours__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Capacity %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>psa_report__Remaining_Capacity_hours__c</fullName>
        <description>Scheduled Calendar Hours - Total Scheduled hours, which should indicate remaining capacity (ie unassigned) hours.</description>
        <formula>pse__Scheduled_Calendar_Hours__c - (pse__Scheduled_Billable_Hours__c + pse__Scheduled_Non_Billable_Hours__c + pse__Scheduled_Excluded_Hours__c + pse__Scheduled_Credited_Hours__c+ pse__Scheduled_Held_Hours__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Scheduled Calendar Hours - Total Scheduled hours, which should indicate remaining capacity (ie unassigned) hours.</inlineHelpText>
        <label>Remaining Capacity Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>psa_report__Total_Scheduled_Hours__c</fullName>
        <description>Sum of all scheduled hours - billable, non billable, credited and excluded</description>
        <formula>pse__Scheduled_Billable_Hours__c + pse__Scheduled_Non_Billable_Hours__c + pse__Scheduled_Excluded_Hours__c + pse__Scheduled_Credited_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sum of all scheduled hours - billable, non billable, credited and excluded</inlineHelpText>
        <label>Total Scheduled Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group</label>
        <referenceTo>pse__Grp__c</referenceTo>
        <relationshipLabel>Utilization Details</relationshipLabel>
        <relationshipName>Utilization_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Hist_Sch_Billable_Hours__c</fullName>
        <label>Historical Scheduled Billable Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Hist_Sch_Credited_Hours__c</fullName>
        <label>Historical Scheduled Credited Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Hist_Sch_Excluded_Hours__c</fullName>
        <label>Historical Scheduled Excluded Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Hist_Sch_Held_Hours__c</fullName>
        <label>Historical Scheduled Held Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Hist_Sch_Non_Billable_Hours__c</fullName>
        <label>Historical Scheduled Non-Billable Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Historical_Billable_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Historical Billable Hours</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Historical_Calendar_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Historical Calendar Hours</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Historical_Credited_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Historical Credited Hours</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Historical_End_Date__c</fullName>
        <label>Historical End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Historical_Excluded_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Historical Excluded Hours</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Historical_Non_Billable_Hours__c</fullName>
        <label>Historical Non-Billable Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Historical_Start_Date__c</fullName>
        <label>Historical Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Historical_Utilization_Billable_Only__c</fullName>
        <formula>IF (
AND(
(pse__Historical_Calendar_Hours__c - pse__Historical_Excluded_Hours__c) = 0,
(pse__Historical_Billable_Hours__c &gt; 0)
), 1, IF (
AND(
(pse__Historical_Calendar_Hours__c - pse__Historical_Excluded_Hours__c) = 0,
(pse__Historical_Billable_Hours__c= 0)
), 0,
((pse__Historical_Billable_Hours__c) / (pse__Historical_Calendar_Hours__c - pse__Historical_Excluded_Hours__c))
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Historical Utilization (Billable Only)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Historical_Utilization_Target_Attainment__c</fullName>
        <formula>IF(pse__Historical_Utilization_Target__c = 0,
IF(pse__Historical_Utilization__c &lt;= 0,0,1),
pse__Historical_Utilization__c / pse__Historical_Utilization_Target__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Historical Utilization Target Attainment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Historical_Utilization_Target_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Historical Utilization Target Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Historical_Utilization_Target__c</fullName>
        <formula>IF(pse__Historical_Calendar_Hours__c = 0,
0,
pse__Historical_Utilization_Target_Hours__c / pse__Historical_Calendar_Hours__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Historical Utilization Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Historical_Utilization__c</fullName>
        <formula>IF (
  AND(
    (pse__Historical_Calendar_Hours__c - pse__Historical_Excluded_Hours__c) = 0,
    (pse__Historical_Billable_Hours__c + pse__Historical_Credited_Hours__c &gt; 0)
  ), 1, IF (
    AND(
      (pse__Historical_Calendar_Hours__c - pse__Historical_Excluded_Hours__c) = 0,
      (pse__Historical_Billable_Hours__c + pse__Historical_Credited_Hours__c = 0)
    ), 0,
    ((pse__Historical_Billable_Hours__c + pse__Historical_Credited_Hours__c) / (pse__Historical_Calendar_Hours__c - pse__Historical_Excluded_Hours__c))
    )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Historical Utilization</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Is_Report_Master__c</fullName>
        <formula>IF (pse__Utilization_Calculation__r.pse__Is_Report_Master__c, &apos;true&apos;, &apos;false&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Derived field from the parent calculation Is Report Master field</inlineHelpText>
        <label>Is Report Master</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Practice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Practice</label>
        <referenceTo>pse__Practice__c</referenceTo>
        <relationshipLabel>Utilization Details</relationshipLabel>
        <relationshipName>Utilization_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>pse__Region__c</referenceTo>
        <relationshipLabel>Utilization Details</relationshipLabel>
        <relationshipName>Utilization_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resource</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Utilization Details</relationshipLabel>
        <relationshipName>Utilization_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Billable_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Scheduled Billable Hours</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Calendar_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Scheduled Calendar Hours</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Credited_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Scheduled Credited Hours</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_End_Date__c</fullName>
        <label>Scheduled End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Excluded_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Scheduled Excluded Hours</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Held_Hours__c</fullName>
        <label>Scheduled Held Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Non_Billable_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Non-billable hours from assignments that are not credited or excluded</description>
        <inlineHelpText>Non-billable hours from assignments that are not credited or excluded</inlineHelpText>
        <label>Scheduled Non-Billable Hours</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Start_Date__c</fullName>
        <label>Scheduled Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Utilization_Billable_Only__c</fullName>
        <formula>IF (
AND(
(pse__Scheduled_Calendar_Hours__c - pse__Scheduled_Excluded_Hours__c) = 0,
(pse__Scheduled_Billable_Hours__c &gt; 0)
), 1, IF (
AND(
(pse__Scheduled_Calendar_Hours__c - pse__Scheduled_Excluded_Hours__c) = 0,
(pse__Scheduled_Billable_Hours__c= 0)
), 0,
((pse__Scheduled_Billable_Hours__c) / (pse__Scheduled_Calendar_Hours__c - pse__Scheduled_Excluded_Hours__c))
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheduled Utilization (Billable Only)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Utilization_Target_Attainment__c</fullName>
        <formula>IF(pse__Scheduled_Utilization_Target__c = 0,
IF(pse__Scheduled_Utilization__c &lt;= 0,0,1),
pse__Scheduled_Utilization__c / pse__Scheduled_Utilization_Target__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheduled Utilization Target Attainment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Utilization_Target_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Scheduled Utilization Target Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Utilization_Target__c</fullName>
        <formula>IF(pse__Scheduled_Calendar_Hours__c = 0,
0,
pse__Scheduled_Utilization_Target_Hours__c / pse__Scheduled_Calendar_Hours__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheduled Utilization Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Utilization__c</fullName>
        <formula>IF (
  AND(
    (pse__Scheduled_Calendar_Hours__c - pse__Scheduled_Excluded_Hours__c) = 0,
    (pse__Scheduled_Billable_Hours__c + pse__Scheduled_Credited_Hours__c &gt; 0)
  ), 1, IF (
    AND(
      (pse__Scheduled_Calendar_Hours__c - pse__Scheduled_Excluded_Hours__c) = 0,
      (pse__Scheduled_Billable_Hours__c + pse__Scheduled_Credited_Hours__c = 0)
    ), 0,
    ((pse__Scheduled_Billable_Hours__c  + pse__Scheduled_Credited_Hours__c) / (pse__Scheduled_Calendar_Hours__c - pse__Scheduled_Excluded_Hours__c))
    )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheduled Utilization</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Template_Key__c</fullName>
        <description>PSE internal field. Not intended for display.</description>
        <label>Template Key</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Time_Period_Type__c</fullName>
        <label>Time Period Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Week</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Quarter</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Time_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Time Period</label>
        <referenceTo>pse__Time_Period__c</referenceTo>
        <relationshipLabel>Utilization Details</relationshipLabel>
        <relationshipName>Utilization_Details1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Total_Utilization_Billable_Only__c</fullName>
        <formula>IF (
AND(
(pse__Scheduled_Calendar_Hours__c + pse__Historical_Calendar_Hours__c - pse__Scheduled_Excluded_Hours__c - pse__Historical_Excluded_Hours__c) = 0,
(pse__Scheduled_Billable_Hours__c + pse__Historical_Billable_Hours__c &gt; 0)
), 1, IF (
AND(
(pse__Scheduled_Calendar_Hours__c + pse__Historical_Calendar_Hours__c - pse__Scheduled_Excluded_Hours__c - pse__Historical_Excluded_Hours__c) = 0,
(pse__Scheduled_Billable_Hours__c + pse__Historical_Billable_Hours__c = 0)
), 0,
((pse__Scheduled_Billable_Hours__c + pse__Historical_Billable_Hours__c) / (pse__Scheduled_Calendar_Hours__c + pse__Historical_Calendar_Hours__c - pse__Scheduled_Excluded_Hours__c - pse__Historical_Excluded_Hours__c))
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Utilization (Billable Only)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Total_Utilization__c</fullName>
        <formula>IF (
  AND(
    (pse__Scheduled_Calendar_Hours__c + pse__Historical_Calendar_Hours__c - pse__Scheduled_Excluded_Hours__c - pse__Historical_Excluded_Hours__c) = 0,
    (pse__Scheduled_Billable_Hours__c + pse__Historical_Billable_Hours__c + pse__Scheduled_Credited_Hours__c + pse__Historical_Credited_Hours__c &gt; 0)
  ), 1, IF (
    AND(
      (pse__Scheduled_Calendar_Hours__c + pse__Historical_Calendar_Hours__c - pse__Scheduled_Excluded_Hours__c - pse__Historical_Excluded_Hours__c) = 0,
      (pse__Scheduled_Billable_Hours__c + pse__Historical_Billable_Hours__c + pse__Scheduled_Credited_Hours__c + pse__Historical_Credited_Hours__c = 0)
    ), 0,
    ((pse__Scheduled_Billable_Hours__c + pse__Historical_Billable_Hours__c + pse__Scheduled_Credited_Hours__c + pse__Historical_Credited_Hours__c) / (pse__Scheduled_Calendar_Hours__c + pse__Historical_Calendar_Hours__c - pse__Scheduled_Excluded_Hours__c - pse__Historical_Excluded_Hours__c))
    )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Utilization</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Group</fullName>
                </value>
                <value>
                    <fullName>Group by Practice</fullName>
                </value>
                <value>
                    <fullName>Group by Region</fullName>
                </value>
                <value>
                    <fullName>Practice</fullName>
                </value>
                <value>
                    <fullName>Practice by Group</fullName>
                </value>
                <value>
                    <fullName>Practice by Region</fullName>
                </value>
                <value>
                    <fullName>Region</fullName>
                </value>
                <value>
                    <fullName>Region by Group</fullName>
                </value>
                <value>
                    <fullName>Region by Practice</fullName>
                </value>
                <value>
                    <fullName>Resource</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Utilization_Calculation__c</fullName>
        <label>Utilization Calculation</label>
        <referenceTo>pse__Utilization_Calculation__c</referenceTo>
        <relationshipLabel>Utilization Details</relationshipLabel>
        <relationshipName>Utilization_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>pse__Utilization_Target_Attainment__c</fullName>
        <formula>IF(pse__Utilization_Target__c = 0,
     IF(pse__Total_Utilization__c &lt;= 0,0,1),
    pse__Total_Utilization__c /  pse__Utilization_Target__c 
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Utilization Target Attainment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Utilization_Target_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Utilization Target Hours</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Utilization_Target__c</fullName>
        <formula>IF(pse__Historical_Calendar_Hours__c + pse__Scheduled_Calendar_Hours__c = 0,
    0,
   pse__Utilization_Target_Hours__c / ( pse__Historical_Calendar_Hours__c + pse__Scheduled_Calendar_Hours__c)
  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Utilization Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Utilization Detail</label>
    <listViews>
        <fullName>psaws__Resources_Below_Their_Utilization_Target</fullName>
        <booleanFilter>(1 OR 2) AND 3 AND 4 AND 5 AND 6</booleanFilter>
        <columns>NAME</columns>
        <columns>pse__Resource__c</columns>
        <columns>pse__Time_Period__c</columns>
        <columns>pse__Utilization_Target_Attainment__c</columns>
        <columns>pse__Utilization_Target__c</columns>
        <columns>pse__Total_Utilization__c</columns>
        <columns>pse__Region__c</columns>
        <columns>pse__Practice__c</columns>
        <columns>pse__Group__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>pse__Historical_Start_Date__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>pse__Scheduled_Start_Date__c</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <filters>
            <field>pse__Is_Report_Master__c</field>
            <operation>equals</operation>
            <value>true</value>
        </filters>
        <filters>
            <field>pse__Time_Period_Type__c</field>
            <operation>equals</operation>
            <value>Month</value>
        </filters>
        <filters>
            <field>pse__Type__c</field>
            <operation>equals</operation>
            <value>Resource</value>
        </filters>
        <filters>
            <field>pse__Utilization_Target_Attainment__c</field>
            <operation>lessOrEqual</operation>
            <value>90</value>
        </filters>
        <label>Resources Below Their Utilization Target</label>
    </listViews>
    <listViews>
        <fullName>pse__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>test</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>test</label>
    </listViews>
    <nameField>
        <displayFormat>UD{000000}</displayFormat>
        <label>Utilization Detail Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Utilization Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>pse__check_historical_end_date</fullName>
        <active>true</active>
        <errorConditionFormula>pse__Historical_End_Date__c &lt; pse__Historical_Start_Date__c</errorConditionFormula>
        <errorDisplayField>pse__Historical_End_Date__c</errorDisplayField>
        <errorMessage>End date is prior to the start date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__check_scheduled_end_date</fullName>
        <active>true</active>
        <errorConditionFormula>pse__Scheduled_End_Date__c &lt; pse__Scheduled_Start_Date__c</errorConditionFormula>
        <errorDisplayField>pse__Scheduled_End_Date__c</errorDisplayField>
        <errorMessage>End date is prior to the start date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__continuous_dates</fullName>
        <active>true</active>
        <errorConditionFormula>AND( NOT(ISNULL(pse__Historical_End_Date__c)) , NOT(ISNULL(pse__Scheduled_Start_Date__c)), OR(pse__Scheduled_Start_Date__c &gt; (pse__Historical_End_Date__c + 1), pse__Scheduled_Start_Date__c &lt; pse__Historical_End_Date__c))</errorConditionFormula>
        <errorDisplayField>pse__Scheduled_Start_Date__c</errorDisplayField>
        <errorMessage>Scheduled utilization start date must immediately follow the historical utilization end date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__disallow_historical_in_future</fullName>
        <active>true</active>
        <errorConditionFormula>AND( pse__Utilization_Calculation__r.pse__Calculate_Historical_Utilization__c, OR ( pse__Historical_Start_Date__c &gt;  TODAY() , pse__Historical_End_Date__c &gt; TODAY() ))</errorConditionFormula>
        <errorMessage>Historical utilization calculation for future dates is not allowed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__disallow_scheduled_in_past</fullName>
        <active>false</active>
        <errorConditionFormula>AND( pse__Utilization_Calculation__r.pse__Calculate_Scheduled_Utilization__c, OR ( pse__Scheduled_Start_Date__c &lt;  TODAY() , pse__Scheduled_End_Date__c &lt; TODAY() ))</errorConditionFormula>
        <errorMessage>Scheduled utilization calculation for past dates is not allowed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__historical_dates_requried_if_checked</fullName>
        <active>false</active>
        <errorConditionFormula>AND( pse__Utilization_Calculation__r.pse__Calculate_Historical_Utilization__c, OR(ISBLANK(pse__Historical_Start_Date__c), ISBLANK(pse__Historical_End_Date__c)))</errorConditionFormula>
        <errorDisplayField>pse__Historical_Start_Date__c</errorDisplayField>
        <errorMessage>Historical Start and End Date are required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__only_one_source_allowed</fullName>
        <active>true</active>
        <errorConditionFormula>IF(CONTAINS(TEXT(pse__Type__c),&apos;by&apos;),
IF
( 
IF(ISBLANK(pse__Region__c),0,1) +
IF(ISBLANK(pse__Practice__c),0,1) +
IF(ISBLANK(pse__Group__c),0,1) +
IF(ISBLANK(pse__Resource__c),0,3) &gt; 2,
true,
false
),
IF
( 
IF(ISBLANK(pse__Region__c),0,1) +
IF(ISBLANK(pse__Practice__c),0,1) +
IF(ISBLANK(pse__Group__c),0,1) +
IF(ISBLANK(pse__Resource__c),0,1) &gt; 1,
true,
false
)
)</errorConditionFormula>
        <errorMessage>Only one of Region, Practice, Group, or Resource may be specified.
Resource cannot be specified for a subtotal detail record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__scheduled_dates_requried_if_checked</fullName>
        <active>false</active>
        <errorConditionFormula>AND( pse__Utilization_Calculation__r.pse__Calculate_Scheduled_Utilization__c, OR(ISBLANK(pse__Scheduled_Start_Date__c), ISBLANK(pse__Scheduled_End_Date__c)))</errorConditionFormula>
        <errorDisplayField>pse__Scheduled_Start_Date__c</errorDisplayField>
        <errorMessage>Scheduled Start and End Date are required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__source_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK(pse__Region__c), ISBLANK(pse__Practice__c), ISBLANK(pse__Group__c), ISBLANK(pse__Resource__c))</errorConditionFormula>
        <errorMessage>One of Region, Practice, Group, or Resource is required</errorMessage>
    </validationRules>
</CustomObject>